--- a/index.html
+++ b/index.html
@@ -5,11 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Music player</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>Music Player</h1>
     <div class="container">
         <div class="player-container">
-            
+            <div class="album-image"></div>
+            <div class="directions">
+                <i class="fa fa-caret-left" aria-hidden="true"></i>
+                <!-- <i class="fa fa-play-circle" aria-hidden="true"></i> -->
+                <i class="fa fa-pause-circle" aria-hidden="true"></i>
+                <i class="fa fa-caret-right" aria-hidden="true"></i>
+            </div>
         </div>
     </div>
 </body>
