--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div class="container">
         <div class="player-container">
             <div class="album-image"></div>
+            <div class="album-title"><span class="title">Super Freaky Girl</span> <span class="sub-title">Nicki Minaj</span></div>
             <div class="directions">
                 <i class="fa fa-caret-left" aria-hidden="true"></i>
                 <!-- <i class="fa fa-play-circle" aria-hidden="true"></i> -->
