--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
             <div class="album-image"></div>
             <div class="album-title"><span class="title">Super Freaky Girl</span> <span class="sub-title">Nicki Minaj</span></div>
             <div class="directions">
-                <i class="fa fa-caret-left" aria-hidden="true"></i>
-                <!-- <i class="fa fa-play-circle" aria-hidden="true"></i> -->
-                <i class="fa fa-pause-circle" aria-hidden="true"></i>
-                <i class="fa fa-caret-right" aria-hidden="true"></i>
+                <i class="fa fa-caret-left" aria-hidden="true" title="Previous music"></i>
+                <!-- <i class="fa fa-play-circle" aria-hidden="true" title="Play music"></i> -->
+                <i class="fa fa-pause-circle" aria-hidden="true" title="Pause music"></i>
+                <i class="fa fa-caret-right" aria-hidden="true" title="Next music"></i>
             </div>
         </div>
     </div>
+
+    <script src="./script.js"></script>
 </body>
 </html>
