--- a/index.html
+++ b/index.html
@@ -13,12 +13,18 @@
     <div class="container">
         <div class="player-container">
             <div class="album-image"></div>
-            <div class="album-title"><span class="title">Super Freaky Girl</span> <span class="sub-title">Nicki Minaj</span></div>
+            <div class="album-title"><span class="title"></span> <span class="sub-title"></span></div>
+            <div class="time-tracker">
+                <div class="bar">
+                    <div class="bar bar-content"></div>
+                </div>
+            </div>
             <div class="directions">
-                <i class="fa fa-caret-left" aria-hidden="true" title="Previous music"></i>
+                <i class="fa fa-caret-left" aria-hidden="true" title="Previous music" id="control-previous"></i>
                 <!-- <i class="fa fa-play-circle" aria-hidden="true" title="Play music"></i> -->
-                <i class="fa fa-pause-circle" aria-hidden="true" title="Pause music"></i>
-                <i class="fa fa-caret-right" aria-hidden="true" title="Next music"></i>
+                <i class="fa fa-pause-circle" aria-hidden="true" title="Pause music" id="control-pause"></i>
+                <i class="fa fa-caret-right" aria-hidden="true" title="Next music" id="control-next"></i>
+                <audio id="audio-track"></audio>
             </div>
         </div>
     </div>
