--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
             <div class="album-title"><span class="title"></span> <span class="sub-title"></span></div>
 
             <div class="mute-button">
-                <i class="fa fa-volume-down" aria-hidden="true"></i>
-                <!-- <i class="fa fa-volume-off" aria-hidden="true"></i> -->
+                <i class="fa fa-volume-down" aria-hidden="true" id="volume_btn"></i>
             </div>
 
             <div class="time-tracker">
