Responsive info content

--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
 
             
             <audio id="audio-track"  preload=”metadata”></audio>
+            <div class="icons">
+                
+            </div>
             <div class="directions">
                 <i class="fa fa-caret-left" aria-hidden="true" title="Previous music" id="control-previous"></i>
                 <i class="fa fa-play-circle play" aria-hidden="true" title="Pause music" id="control-pause"></i>
