Updated styles and script.js

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="album-title"><span class="title"></span> <span class="sub-title"></span></div>
 
             <div class="mute-button">
-                <i class="fa fa-volume-down" aria-hidden="true" id="volume_btn" title="mute"></i>
+                <i class="fa fa-volume-up" aria-hidden="true" id="volume_btn" title="Mute"></i>
             </div>
 
             <div class="time-tracker">
@@ -72,8 +72,9 @@
 
             
             <audio id="audio-track"  preload=”metadata”></audio>
-            <div class="icons">
-                
+            <div class="icon-list">
+                <i class="fa fa-refresh" aria-hidden="true" title="Loop song"></i>
+                <i class="fa fa-list-ul" aria-hidden="true" title="Show playlist"></i>
             </div>
             <div class="directions">
                 <i class="fa fa-caret-left" aria-hidden="true" title="Previous music" id="control-previous"></i>
