Styled playlist content

--- a/index.html
+++ b/index.html
@@ -50,6 +50,27 @@
         </div>
     </div>
 
+    <div class="modal-playlist">
+        <div class="modal-content">
+            <div class="content">
+                <h2>Playlist</h2>
+                <div class="song-container">
+                    <div class="song">
+                        <img src="./images/music-image1.png" alt="song image">
+                        <div class="details">
+                            <p class="song-name">Song name</p>
+                            <span class="artist">Singer</span>
+                        </div>
+                        <span class="rank">3</span>
+                    </div>
+
+                    
+
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="sound-wave"></div>
     <h1>Music Player</h1>
     <div class="container">
