Initialised playlist's list

--- a/index.html
+++ b/index.html
@@ -53,18 +53,16 @@
     <div class="modal-playlist">
         <div class="modal-content">
             <div class="content">
-                <h2>Playlist</h2>
+                <h2>Playlist <i class="fa fa-music" aria-hidden="true"></i></h2>
                 <div class="song-container">
-                    <div class="song">
+                    <!-- <div class="song" title="Choose song">
                         <img src="./images/music-image1.png" alt="song image">
                         <div class="details">
                             <p class="song-name">Song name</p>
                             <span class="artist">Singer</span>
                         </div>
                         <span class="rank">3</span>
-                    </div>
-
-                    
+                    </div> -->
 
                 </div>
             </div>
@@ -94,8 +92,7 @@
             
             <audio id="audio-track"  preload=”metadata”></audio>
             <div class="icon-list">
-                <i class="fa fa-refresh" aria-hidden="true" title="Loop song"></i>
-                <i class="fa fa-list-ul" aria-hidden="true" title="Show playlist"></i>
+                <i class="fa fa-list-ul" aria-hidden="true" title="Show playlist" id="show_playlist"></i>
             </div>
             <div class="directions">
                 <i class="fa fa-caret-left" aria-hidden="true" title="Previous music" id="control-previous"></i>
